--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "kristina-fitness",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+	"node": "19.1.0",
+	"npm": "8.19.3"
+},
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -9,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
